<resources>

    <!--my string-->
    <string name="prefs_category_video_settings_title">تنظیمات ویدیو</string>
    <string name="prefs_category_audio_settings_title">تنظیمات صدا</string>
    <string name="prefs_category_save_options_title">تنظیمات ذخیره سازی</string>
    <string name="prefs_category_recording_settings_title">تنظیمات ضبط ویدیو</string>
    <string name="preference_resolution_title">وضوح تصویر</string>
    <string name="preference_fps_title">فریم در ثانیه</string>
    <string name="preference_bit_title">نرخ بیت</string>
    <string name="preference_audio_record_title">ضبط صدا</string>
    <string name="preference_audio_record_summary">ضبط صدا از میکروفون همراه با ضبط صفحه نمایش</string>
    <string name="preference_filename_format_title">فرمت نام گذاری</string>
    <string name="preference_filename_prefix_title">پیشوند نام فایل</string>
    <string name="preference_floating_control_title">استفاده از کنترل شناور</string>
    <string name="preference_floating_control_summary">فعال / غیر فعال کردن کنترل های شناور که بر روی هر صفحه نمایش ترسیم می شود</string>
    <string name="preference_floating_control_size_title">اندازه آیکون کنترل شناور</string>
    <string name="preference_floating_control_size_summary">اندازه آیکون کنترل شناور روی صفحه را تنظیم کنید</string>
    <string name="preference_show_touch_title">نمایش لمس صفحه نمایش</string>
    <string name="preference_show_touch_summary">فعال / غیرفعال کردن لمس صفحه نمایش</string>
    <string name="preference_enable_target_app_title">برنامه هدف را فعال کنید</string>
    <string name="preference_enable_target_app_summary">شما می تونید قبل از ضبط، انتخاب کنید که برنامه مورد نظرتون باز بشه</string>
    <string name="preference_app_chooser_title">برنامه را انتخاب کنید</string>
    <string name="preference_app_chooser_summary">یک برنامه را انتخاب کنید تا به طور پیشفرض در هنگام ضبط اجرا شود</string>

    <!--App string-->
    <string name="app_name" translatable="false">ScreenCam</string>
    <string name="preference_resolution_summary">Select the resolution to record at</string>
    <string name="preference_fps_summary">Choose fps to record at</string>
    <string name="preference_bit_summary">Choose bit rate</string>
    <string name="preference_save_location_title">Save location</string>
    <string name="res_key" translatable="false">resolution</string>
    <string name="fps_key" translatable="false">fps</string>
    <string name="bitrate_key" translatable="false">bitrate</string>
    <string name="audiorec_key" translatable="false">audiorec</string>
    <string name="savelocation_key" translatable="false">savelocation</string>
    <string name="filename_key" translatable="false">filename</string>
    <string name="fileprefix_key" translatable="false">fileprefix</string>
    <string name="storage_permission_request_title">Allow Storage Permission</string>
    <string name="storage_permission_request_summary">Write permission to storage is required to save the recorded video.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="screen_recording_permission_denied">Screen Recording Permission Denied</string>
    <string name="screen_recording_notification_title">Screen recording</string>
    <string name="screen_recording_notification_action_stop">Stop</string>
    <string name="screen_recording_notification_action_pause">Pause</string>
    <string name="screen_recording_notification_action_resume">Resume</string>
    <string name="fatal_exception_message">ScreenRecorder: Fatal Exception occurred. Log has been sent</string>
    <string name="about_activity_label">About</string>
    <string name="snackbar_storage_permission_message">Grant storage perm</string>
    <string name="snackbar_storage_permission_action_enable">ENABLE</string>
    <string name="menu_about_title">About</string>
    <string name="about_credits">Credits</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_opensource">Open Source</string>
    <string name="app_icon_credit_Niko">App Icons by %1$s\n\nwebsite: %2$s</string>
    <string name="video_editor_library_credit">Video Editor by %1$s\n\nGithub url: %2$s\n\nLicense: %3$s</string>
    <string name="analytics_library_credit">Crash reporting and analytics SDK by %1$s\n\nGithub url: %2$s\n\nLicense: %3$s</string>
    <string name="opensource_info">This app is opensourced and the source could be obained at \n\nGithub url: %1$s\n\nLicense: %2$s</string>
    <string name="fab_record_hint">Start recording</string>
    <string name="recording_failed_toast">Screen recording failed.</string>
    <string name="screenrecording_already_active_toast">Screen recording session already active</string>
    <string name="large_resolution_selected_toast">The selected resolution is larger than display resolution. Using %1$s resolution instead</string>
    <string name="shortcut_short_label">Record</string>
    <string name="shortcut_long_label">Quick Record</string>
    <string name="shortcut_disabled_message">Recording disabled</string>
    <string name="app_shortcut_action" translatable="false">com.orpheusdroid.screenrecorder.RECORD</string>
    <string name="screen_recording_started_toast">Screen recording started</string>
    <string name="screen_recording_stopped_toast">Screen Recording stopped</string>
    <string name="screen_recording_resumed_toast">Screen Recording resumed</string>
    <string name="screen_recording_paused_toast">Screen Recording paused</string>
    <string name="fab_stop_hint">Stop recording</string>
    <string name="share_intent_title">Share recorded</string>
    <string name="share_intent_notification_title">Share recorded video</string>
    <string name="share_intent_notification_content">click to share the recorded video</string>
    <string name="share_intent_notification_action_text">Share</string>
    <string name="preference_floating_control_key" translatable="false">floating_controls</string>
    <string name="tab_settings_title">Settings</string>
    <string name="tab_videos_title">Videos</string>
    <string name="video_list_permission_denied_message">Storage permission denied</string>
    <string name="video_list_no_video_message">No videos available</string>
    <string name="alert_title_create_folder">Create Folder</string>
    <string name="alert_message_create_folder">Enter folder name</string>

    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="preference_show_touch_key" translatable="false">touch_pointer</string>
    <string name="alert_plugin_not_found_title">Plugin not found</string>
    <string name="alert_plugin_not_found_message">Plugin is required to show touches. Do you want to buy it now?</string>
    <string name="alert_permission_denied_title">Storage Permission Denied</string>
    <string name="alert_permission_denied_message">The app requires storage permission to save the recorded video and change default save directory.The app is rendered useless without the permission\n\nDo you want to grant it now?</string>
    <string name="edit_intent_notification_action_text">Edit</string>
    <string name="prefs_category_analytics_title">Anonymous analytics</string>
    <string name="preference_crash_reporting_title">Crash reporting</string>
    <string name="preference_crash_reporting_summary">Enable anonymous crash reporting</string>
    <string name="preference_crash_reporting_key" translatable="false">crash_reporting</string>
    <string name="preference_anonymous_statistics_title">Anonymous statistics</string>
    <string name="preference_anonymous_statistics_summary">Enable anonymous statistics on number of app usages</string>
    <string name="preference_anonymous_statistics_key" translatable="false">usage_statistics</string>
    <string name="preference_floating_control_size_key" translatable="false">floatingControlSize</string>
    <string name="storage_selection_spinner_title">Select storage</string>
    <string name="external_storage_dir_not_writable">The directory is not writable</string>
    <string name="alert_external_storage_warn_cb_text">Do not show again</string>
    <string name="alert_ext_dir_warning_title">Warning</string>
    <string name="alert_ext_dir_warning_message">Saving to external directory may not work on all phones. Proceed with caution.</string>
    <string name="prefs_category_experimental_title">Expertmental</string>
    <string name="preference_save_gif_title">Enable saving in GIF</string>
    <string name="preference_save_gif_summary">Enables saving videos as GIF animation</string>
    <string name="preference_save_gif_key" translatable="false">save_gif</string>
    <string name="preference_shake_gesture_title">Shake to start/stop recording</string>
    <string name="preference_shake_gesture_summary">Shake your device to start or stop recording</string>
    <string name="preference_shake_gesture_key" translatable="false">shake_gesture</string>
    <string name="screenrecording_waiting_for_gesture_toast">Shake your device to start recording when ready</string>
    <string name="preference_theme_key" translatable="false">theme</string>
    <string name="prefs_category_theme_title">Theme</string>
    <string name="preference_theme_title">Choose Theme</string>
    <string name="preference_enable_target_app_key" translatable="false">enable_app_target</string>
    <string name="preference_app_chooser_key" translatable="false">app_chosen</string>
    <plurals name="delete_alert_title">
        <item quantity="zero">Delete video?</item>
        <item quantity="one">Delete video?</item>
        <item quantity="other">Delete videos?</item>
    </plurals>
    <plurals name="delete_alert_message">
        <item quantity="zero">Are you sure you want to delete the video?</item>
        <item quantity="one">Are you sure you want to delete the video?</item>
        <item quantity="other">Are you sure you want to delete %1$d videos?</item>
    </plurals>
</resources>
